# ratatoist

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml  release.yml  rollback-release.yml  rollback.yml  version-bump.yml
crates/ratatoist-core/: Cargo.toml  README.md
crates/ratatoist-core/examples/: cleanup_test.rs  test_api.rs
crates/ratatoist-core/src/: config.rs  lib.rs  logging.rs  sync_state.rs
crates/ratatoist-core/src/api/: client.rs  models.rs  sync.rs
crates/ratatoist-nvim/: Cargo.toml
crates/ratatoist-nvim/src/: lib.rs
crates/ratatoist-tui/: Cargo.toml  README.md
crates/ratatoist-tui/src/: app.rs  keys.rs  main.rs
crates/ratatoist-tui/src/ui/: dates.rs  keyhints.rs  layout.rs  mod.rs  setup.rs  splash.rs  statusbar.rs  theme.rs
crates/ratatoist-tui/src/ui/components/: cheatsheet.rs  error_popup.rs  input_popup.rs  mod.rs  popup.rs  priority_picker.rs  task_form.rs  theme_picker.rs
crates/ratatoist-tui/src/ui/themes/: catppuccin_mocha.json  dracula.json  everforest_dark.json  gruvbox_dark.json  kanagawa_wave.json  nord.json  one_dark.json  rose_pine.json  solarized_dark.json  tokyo_night.json
crates/ratatoist-tui/src/ui/views/: detail.rs  mod.rs  overview.rs  projects.rs  settings.rs  tasks.rs
crates/ratatoist-tui/themes/: catppuccin-mocha.json  dracula.json  gruvbox-dark.json  material-dark.json  monokai.json  nord.json  one-dark.json  rose-pine.json  solarized-dark.json  tokyo-night.json
scripts/: format.sh
src/: app.rs  config.rs  keys.rs  main.rs
src/api/: client.rs  models.rs
src/ui/: keyhints.rs  layout.rs  mod.rs  theme.rs
src/ui/components/: list.rs
src/ui/views/: projects.rs  tasks.rs
