[package]
name = "ratatoist"
version = "0.1.0"
edition = "2024"
description = "A terminal user interface for Todoist"
license = "MIT"
repository = "https://github.com/cxrlos/ratatoist"
readme = "README.md"
keywords = ["todoist", "tui", "terminal", "ratatui", "productivity"]
categories = ["command-line-interface"]

[dependencies]
anyhow = "1"
crossterm = "0.29"
dirs = "6"
ratatui = "0.30"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
