[workspace]
members  = ["crates/*"]
resolver = "3"

[workspace.package]
edition    = "2024"
license    = "MIT"
repository = "https://github.com/cxrlos/ratatoist"

# Single source of truth for the ratatoist-core version used across the workspace.
# When publishing core, the workflow updates this version (and the crate's own
# Cargo.toml) in one commit. Consumers (ratatoist-tui, ratatoist-nvim, …) inherit
# it via `ratatoist-core.workspace = true` — no per-crate sync required.
[workspace.dependencies]
ratatoist-core = { path = "crates/ratatoist-core", version = ".1.0" }

# Shared deps — both crates use the same version; add features here if a consumer
# needs them and they are safe to enable globally (additive Cargo feature model).
anyhow     = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
tracing    = "0.1"
