[package]
name        = "ratatoist-core"
description = "Core library for ratatoist: Todoist API client, config, logging"
version     = "0.2.1"
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow.workspace     = true
serde.workspace      = true
serde_json.workspace = true
tokio.workspace      = true
tracing.workspace    = true

chrono            = { version = "0.4", features = ["serde"] }
dirs              = "6"
rand              = "0.8"
reqwest           = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toml              = "0.8"
tracing-appender  = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
