[package]
name = "ratatoist-tui"
description = "Terminal user interface for Todoist"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ratatoist"
path = "src/main.rs"

[dependencies]
ratatoist-core = { path = "../ratatoist-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.30"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
