[package]
name = "ratatoist-tui"
description = "Terminal user interface for Todoist"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ratatoist"
path = "src/main.rs"

[dependencies]
ratatoist-core = { path = "../ratatoist-core", version = "0.2.0" }
anyhow = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
futures-util = "0.3"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tracing = "0.1"
