[package]
name = "ratatoist-tui"
description = "Terminal user interface for Todoist"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ratatoist"
path = "src/main.rs"

[dependencies]
ratatoist-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
futures-util = "0.3"
ratatui = "0.30"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
